--- a/css/styles.css
+++ b/css/styles.css
@@ -8,37 +8,57 @@ body {
     font-weight: 100;
 }
 
+.container {
+    height: 484px;
+    width: 924px;
+    border: 1px solid #A8A8A8;
+    border-radius: 0px 25px 25px 0px;
+    background-color: #DEDEDE;
+}
+
 /* grid */
 #grid-container {
-    width: 572px;
-    height: 572px;
+    width: 528px;
+    height: 484px;
     font-size: 26px;
+    display: 'inline-block';
+    float: left;
+    background-color: #FFFFFF;
 }
 
-#grid-container > div {
-    width: 572px;
+#grid {
+    width: 528px;
+    height: 484px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+}
+
+#grid > div {
+    width: 528px;
     height: 44px;
 }
 
-#grid-container > div > div {
+#grid > div > div {
     width: 44px;
     height: 44px;
-    border: 1px solid #eeeeee;
     float: left;
+    text-align: center;
 }
 
-.border-top {
-    border-top: 2px solid #eeeeee!important;
+/* editor */
+#editor-container {
+    width: 340px;
+    height: 460px;
+    display: 'inline-block';
+    float: left;
+    overflow: auto;
+    padding: 0px 10px;
+    margin-top: 14px;
 }
 
-.border-left {
-    border-left: 2px solid #eeeeee!important;
-}
-
-.border-right {
-    border-right: 2px solid #eeeeee!important;
-}
-
-.border-bottom {
-    border-bottom: 2px solid #eeeeee!important;
+.text-field {
+    width: 45% !important;
 }
