--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
     background-color: #FFFFFF;
 }
 
-#grid {
+#grid-bg {
     width: 528px;
     height: 484px;
     position: absolute;
@@ -34,6 +34,8 @@ body {
     left: 0px;
     right: 0px;
     bottom: 0px;
+    vertical-align: middle;
+    text-align: center;
 }
 
 #grid > div {
@@ -46,6 +48,18 @@ body {
     height: 44px;
     float: left;
     text-align: center;
+}
+
+#grid-bg > div > div {
+    border: 1px solid #A8A8A8;
+    position: absolute;
+    text-align: center;
+}
+
+#grid-bg > div > div span {
+    line-height: 2; 
+    display: inline-block;
+    vertical-align: middle;
 }
 
 /* editor */
