--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,10 @@ body {
 }
 
 #grid-bg > div > div {
-    border: 1px solid #3e77a5;
+    border: 1px solid #4b87b7;
     position: absolute;
     text-align: center;
-    background-color: #4f8ec1;
+    background-color: #66a4d6;
 }
 
 /* editor */
