--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+body {
+    margin: 0;
+}
+
+.content-container {
+    width: 40%;
+    margin: 0 auto;
+}
+
+.author {
+    text-align: center;
+    font-weight: 800;
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+h1 {
+    margin-bottom: 0px !important;
+    font-size: 50px;
+    text-transform: uppercase;
+    color: #19a8b4;
+}
+
+h2 {
+    font-size: 30px !important;
+    margin-top: 0px !important;
+}
+
+h3 {
+    font-size: 16px;
+    margin-top: 0px !important;
+    text-align: center;
+}
 
 path {
     stroke: white;
@@ -15,46 +49,40 @@ path {
     border-radius: 2px;
 }
 
-body {
-    font-size: 16px;
-    font-family: "Lato", sans-serif;
-    margin: 0;
+#coral-map, #coral-line {
+    width: 68%;
 }
 
-.content-container {
-    width: 40%;
-    margin: 0 auto;
-}
-
-.author {
-    text-align: center;
-}
-
-h1, h2 {
-    text-align: center;
-}
-
-h1 {
-    margin-bottom: 0px;
-    font-size: 50px;
-    text-transform: uppercase;
-    color: #19a8b4;
-}
-
-p {
-    line-height: 28px;
+#coral-map, #coral-map-explain {
+    float: left;
 }
 
 #coral-line, #coral-line-explain {
     float: left;
 }
 
-#coral-line {
-    text-align: left;
-}
-
 #coral-line-explain {
     width: 30%;
+    height: 480px;
+}
+
+#coral-line {
+    text-align: right;
+}
+
+#coral-map-explain, #coral-line-explain {
+    overflow: auto;
+    width: 30%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+#coral-map-explain {
+    height: 560px;
+}
+
+#coral-map-slider, #range-desc {
+    text-align: center !important;
 }
 
 .simulation {
@@ -168,4 +196,18 @@ path.area {
 
 .text-field {
     width: 45% !important;
+}
+
+div.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: 100px;					
+    height: 25px;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: rgba(0, 0, 0, 0.8);
+    color: #ffffff;
+    border: 0px;		
+    border-radius: 2px;			
+    pointer-events: none;			
 }
